--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
-        <title>TechShop</title>
+        <title>[[#{aplicacion.titulo}]]</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <!-- <link rel="stylesheet" href="css/estilos.css"> -->
@@ -13,26 +13,63 @@
                     </head>    
                     <body>         
                         <header th:fragment="header" class="header">
-                            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0 text-white">
+                            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0 text-white justify-content-between">
                                 <div class="container">
-                                    <a th:href="@{/}" class="navbar-brand">Logo</a>
+                                    <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
                                     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"><i class="fa-solid fa-bars"></i></button>
                                 </div>
-                                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                                <div class="collapse navbar-collapse" id="navbarCollapse">
                                     <ul class="navbar-nav">
-                                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">Categoria</a></li>
-                                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">OK</a></li>
-                                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">OK</a></li>                     
+                                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
+                                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.productos}]]</a></li> 
+                                        
+                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.extras}]]</a>
+                                            <ul class="dropdown-menu dropdown-menu-dark">
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/pruebas/listado}">[[#{plantilla.consultas}]]</a></li>
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.admin}]]</a>
+                                            <ul class="dropdown-menu dropdown-menu-dark">
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/pruebas/listado}">[[#{plantilla.usuarios}]]</a></li>
+                                                <li class="submenu submenu-md dropend"><a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" onclick="event.stopPropagation()" role="button">[[#{plantilla.seguridad}]]</a>
+                                                    <ul class="dropdown-menu dropdown-menu-dark">
+                                                        <li><a class="dropdown-item" th:href="@{/role/listado}">[[#{plantilla.seguridad}]]</a></li>
+                                                        <li><a class="dropdown-item" th:href="@{/usuario_role/asignar}">[[#{plantilla.permisos}]]</a></li>
+                                                        <li><a class="dropdown-item" th:href="@{/ruta/listado}">[[#{plantilla.rutas}]]</a></li>
+                                                    </ul>                                                
+                                                </li>
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/pruebas/listado}">[[#{plantilla.constantes}]]</a></li>
+                                            </ul>
+                                        </li>
                                     </ul>
-                                </div>
-                                
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
+                                            <ul class="dropdown-menu dropdown-menu-dark">
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/(lang=es)}">Español</a></li>
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/(lang=en)}">Inglés</a></li>
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/(lang=fr)}">Francés</a></li>
+                                                <li><a class="dropdown-item bg-dark" th:href="@{/(lang=pt)}">Portugés</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>                                
                             </nav>
+                            <section class="py-2 bg-success text-white">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h2><i class="fa-solid fa-warehouse"></i> [[#{plantilla.suTienda}]]</h2>
+                                    </div>
+                                </div>
+                            </section>
   
 
                         </header>
 
                         <footer th:fragment="footer" class="p-2 mt-5 bg-info text-white">
-                            <p class="lead text-center">TechShop todos los derechos reservados &COPY; </p>
+                            <p class="lead text-center">[[#{plantilla.derechos}]] &COPY; </p>
                         </footer>
                     </body>
                     </html>
